--- a/Imagenes.qrc
+++ b/Imagenes.qrc
@@ -10,5 +10,10 @@
         <file>Imagenes/Pj_v.png</file>
         <file>Imagenes/Amanecer.png</file>
         <file>Imagenes/bullet.png</file>
+        <file>Imagenes/Anochecer.png</file>
+        <file>Imagenes/Regalo.png</file>
+        <file>Imagenes/Cannon_Ball.png</file>
+        <file>Imagenes/Bola de fuego.png</file>
+        <file>Imagenes/Noche.png</file>
     </qresource>
 </RCC>
